[CMake] Cannot link libTestRunnerInjectedBundle.so in non unified build https://bugs.webkit.org/show_bug.cgi?id=226088

Reviewed by Adrian Perez de Castro.

Source/JavaScriptCore:

* wasm/js/JSWebAssemblyModule.h: Add missing header

Source/WebCore:

Covered by existing tests.

* inspector/InspectorController.cpp:
(WebCore::InspectorController::isUnderTest const): Defining  it.
* inspector/InspectorController.h: Export isUnderTest().
* loader/SubresourceIntegrity.h: Add missing header.
* platform/gtk/ValidationBubbleGtk.cpp: Ditto.
* svg/graphics/filters/SVGFEImage.h: Ditto.
* testing/Internals.cpp:
(WebCore::Internals::mediaSessionState): Cast new enum to the WebCore
one.
* testing/Internals.h: Redefine MediaSessionState as a new enum
instead of aliasing to avoid redefinitions of
convertEnumerationToString in non-unified builds.
* workers/WorkerConsoleClient.h:

Tools:

* WebKitTestRunner/CMakeLists.txt: Pull WebCore as dependency for
WTR/WTRInjectedBundle



Canonical link: https://commits.webkit.org/246265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288361 268f45cc-cd09-0410-ab3c-d52691b4dbfc