Source/WebCore/inspector/InspectorController.cpp
@@ -359,6 +359,11 @@ void InspectorController::getHighlight(InspectorOverlay::Highlight& highlight, I
     m_overlay->getHighlight(highlight, coordinateSystem);
 }
 
+bool InspectorController::isUnderTest() const
+{
+    return m_isUnderTest;
+}
+
 unsigned InspectorController::gridOverlayCount() const
 {
     return m_overlay->gridOverlayCount();
